--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,16 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 img {
     display: block;
 }
+
+.jumbotron{
+    width: 100%;
+    min-height: 200px ;
+    background-image: url("/images/heros/hero-image_4.jpg");
+}
+
