--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,15 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
-<h1>Restaurant Apps Starter Project</h1>
-<p>Hallo coders! Anda berhasil menjalankan starter project.</p>
-<p>Jangan lupa untuk menggunakan salah satu gambar yang berada pada ./images/heros sebagai background hero elemen</p>
-<img src="./images/heros/hero-image_1.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_2.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_3.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_4.jpg" width="450" alt="">
+    <header>
+        <h1>
+            Restaurant App
+        </h1>
+    </header>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Favorite</li>
+            <li>About Us</li>
+        </ul>
+    </nav>
+    <div class="jumbotron">
+        <h2>Lorem, ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cumque nam voluptates obcaecati. Natus reprehenderit voluptatum nobis vel qui explicabo?</p>
+    </div>
+
+    <body>
+        <h2>Explore Restaurant</h2>
+        <section id="restaurant-list">
+
+        </section>
+    </body>
+    <footer>
+        <p>Copyright 2020 - Hunger Apps</p>
+    </footer>
+
 </body>
 </html>
