--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
@@ -13,9 +14,9 @@
     </header>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Favorite</li>
-            <li>About Us</li>
+            <li><a href="/">Home</a></li>
+            <li><a href="#">Favorite</a></li>
+            <li><a href="https://github.com/RulyAnggriawan" title="github">About Us</a></li>
         </ul>
     </nav>
     <div class="jumbotron">
@@ -23,14 +24,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cumque nam voluptates obcaecati. Natus reprehenderit voluptatum nobis vel qui explicabo?</p>
     </div>
 
-    <body>
-        <h2>Explore Restaurant</h2>
+    <main>
+        <h2>Explore Restaurants</h2>
         <section id="restaurant-list">
 
         </section>
-    </body>
+    </main>
     <footer>
-        <p>Copyright 2020 - Hunger Apps</p>
+        <p>by : Ruly Anggriawan - 2020</p>
     </footer>
 
 </body>
