--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,9 +8,101 @@ img {
     display: block;
 }
 
-.jumbotron{
-    width: 100%;
-    min-height: 200px ;
-    background-image: url("/images/heros/hero-image_4.jpg");
+header{
+    min-height: 80px;
 }
 
+header>h1{
+    text-align: left;
+    min-height: 80px;
+    line-height: 80px;
+}
+nav{
+    min-height: 80px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+nav>ul{
+    text-align: right;
+    padding: 0 10px 10px 0;
+}
+
+nav li{
+    display: inline-block;
+    padding: 0 10px;
+    min-height: 80px;
+    line-height: 80px;
+}
+
+.jumbotron{
+    width: 100%;
+    min-height: 250px ;
+    background-image: url("/images/heros/hero-image_3.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    color: aliceblue;
+    text-align: center;
+    line-height: 100px;
+}
+
+main{
+    margin: 50px 50px;
+}
+
+main h2{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+#restaurant-list{
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+}
+
+.restaurant{
+    position: relative;
+}
+
+.cover{
+    height: 50%;
+}
+
+.cover img{
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+.content{
+    margin: 15px 15px 15px 15px;
+}
+
+.city{
+    position: absolute;
+    top : 20px;
+    left: 20px;
+    font-weight: bold;
+    font-size: large;
+    color: black;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    min-width: 100px;
+    text-align: center;
+}
+
+.name{
+    font-weight: bold;
+    font-size: 1.5em;
+    margin: 5px 0;
+}
+
+footer{
+    text-align: center;
+    min-height: 50px;
+}
