before off canvas menu

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>
-            Restaurant App
-        </h1>
+        <p>
+            <img src="/images/logo.jpeg" alt="logo restaurant app">
+        </p>
     </header>
-    <nav>
+    <nav id="drawer">
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="#">Favorite</a></li>
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <div class="jumbotron">
-        <h2>Lorem, ipsum dolor.</h2>
+        <h1>Restaurant App</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cumque nam voluptates obcaecati. Natus reprehenderit voluptatum nobis vel qui explicabo?</p>
     </div>
 
