--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,24 +4,44 @@
     box-sizing: border-box;
 }
 
+html, body, main{
+    width: 100%;
+} 
+
 img {
     display: block;
 }
 
 header{
     min-height: 80px;
+
 }
 
-header>h1{
+/* header>h1{
+    padding-left: 50px;
     text-align: left;
     min-height: 80px;
     line-height: 80px;
+    display: inline-block;
+} */
+header p{
+    line-height: 80px;
+    display: inline-block;
 }
+
+header img{
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+
+}
+
 nav{
     min-height: 80px;
     position: absolute;
     right: 0;
     top: 0;
+    padding-right: 50px;
 }
 
 nav>ul{
@@ -45,64 +65,97 @@ nav li{
     background-position: center center;
     color: aliceblue;
     text-align: center;
-    line-height: 100px;
 }
 
-main{
-    margin: 50px 50px;
+.jumbotron > h1{
+    padding: 20px;
 }
+
+
 
 main h2{
     text-align: center;
-    margin-bottom: 50px;
+    margin: 50px 0;
 }
 
-#restaurant-list{
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-}
 
-.restaurant{
-    position: relative;
-}
-
-.cover{
-    height: 50%;
-}
-
-.cover img{
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
-}
-
-.content{
-    margin: 15px 15px 15px 15px;
-}
-
-.city{
-    position: absolute;
-    top : 20px;
-    left: 20px;
-    font-weight: bold;
-    font-size: large;
-    color: black;
-    padding: 10px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
-    min-width: 100px;
-    text-align: center;
-}
-
-.name{
-    font-weight: bold;
-    font-size: 1.5em;
-    margin: 5px 0;
+a{
+    min-width: 44px;
+    min-height: 44px;
 }
 
 footer{
     text-align: center;
     min-height: 50px;
+    background-color: #b6eb7a;
+    line-height: 50px;
+}
+
+@media screen and (max-width: 760px){
+    /* #drawer{
+        display: none;
+    } */
+}
+
+@media screen and (min-width: 480px){
+
+    /* header{
+        text-align: center;
+    }
+    header>h1{
+        padding-left: 0px;
+        text-align: center;
+        min-height: 80px;
+        line-height: 80px;
+        display: block;
+    }
+    
+    header img{
+        display: block;
+        height: 100%;
+        margin: 0 auto;
+        vertical-align: middle;
+    }
+
+    main{
+        margin: 20px 20px;
+    }
+
+    .jumbotron{
+        min-height: 150px;
+    }
+
+    #restaurant-list{
+        display: grid;
+        width: 100%;
+        grid-template-columns: 1fr;
+    } */
+}
+
+@media screen and (min-width: 768px){
+
+    /* main{
+        margin: 50px 50px;
+    }
+
+    #restaurant-list{
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+    } */
+}
+
+@media screen and (min-width: 1025px){
+
+    /* main{
+        margin: 50px 50px;
+    }
+
+    #restaurant-list{
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+    } */
 }
