--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,15 +10,18 @@
     <header>
         <p>
             <img src="/images/logo.jpeg" alt="logo restaurant app">
+
         </p>
+        <nav id="drawer" class="hidden">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="#">Favorite</a></li>
+                <li><a href="https://github.com/RulyAnggriawan" title="github">About Us</a></li>
+            </ul>
+        </nav>
+        <a href="#" id="hamburger">&#9776;</a>
     </header>
-    <nav id="drawer">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#">Favorite</a></li>
-            <li><a href="https://github.com/RulyAnggriawan" title="github">About Us</a></li>
-        </ul>
-    </nav>
+    
     <div class="jumbotron">
         <h1>Restaurant App</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cumque nam voluptates obcaecati. Natus reprehenderit voluptatum nobis vel qui explicabo?</p>
