--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Restaurant Apps Starter Project</title>
+    <title>Restaurant Apps</title>
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to Content</a>
     <header>
+        
         <p>
-            <img src="/images/logo.jpeg" alt="logo restaurant app">
+            <img src="./images/logo.jpeg" alt="logo restaurant app">
 
         </p>
         <nav id="drawer" class="hidden">
@@ -19,7 +21,7 @@
                 <li><a href="https://github.com/RulyAnggriawan" title="github">About Us</a></li>
             </ul>
         </nav>
-        <a href="#" id="hamburger">&#9776;</a>
+        <a href="#" id="hamburger" >&#9776;</a>
     </header>
     
     <div class="jumbotron">
@@ -27,7 +29,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cumque nam voluptates obcaecati. Natus reprehenderit voluptatum nobis vel qui explicabo?</p>
     </div>
 
-    <main>
+    <main id="main-content">
         <h2>Explore Restaurants</h2>
         <section id="restaurant-list">
 
