--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,7 +29,7 @@ header ul{
 }
 
 header li{
-    padding: 10px;
+    padding: 15px;
     border-top: 1px solid black;
 }
 
@@ -56,7 +56,6 @@ header img{
 
 #hamburger{
     text-align: center;
-    line-height: 80px;
     font-size: 2em;
     font-weight: bold;
 }
@@ -92,6 +91,7 @@ a{
     text-decoration: none;
     min-width: 44px;
     min-height: 44px;
+    padding: 15px;
 }
 
 footer{
@@ -146,6 +146,7 @@ footer{
         padding: 0 10px;
         line-height: 80px;
         border-top: none;
+        font-size: 1.5em;
     } 
 
     main{
@@ -157,6 +158,7 @@ footer{
         width: 100%;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 20px;
+        font-size: medium;
     }
 
 
@@ -170,5 +172,10 @@ footer{
         width: 100%;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 20px;
-    } 
+        font-size: large;
+    }
+
+    nav li{
+        font-size: 2em;
+    }
 }
