--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="restaurants catalog apps">
     <title>Restaurant Apps</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                 <li><a href="https://github.com/RulyAnggriawan" title="github">About Us</a></li>
             </ul>
         </nav>
-        <a href="#" id="hamburger" >&#9776;</a>
+        <a href="#" id="hamburger" aria-label="click to toggle menu" >&#9776;</a>
     </header>
     
     <div class="jumbotron">
