--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="restaurants catalog apps">
+    <link rel="icon" href="favicon.jpeg">
     <title>Restaurant Apps</title>
 </head>
 <body>
@@ -30,10 +31,7 @@
     </div>
 
     <main id="main-content">
-        <h2>Explore Restaurants</h2>
-        <section id="restaurant-list">
-
-        </section>
+        
     </main>
     <footer>
         <p>by : Ruly Anggriawan - 2020</p>
@@ -41,3 +39,4 @@
 
 </body>
 </html>
+
