add detail page - mobile version

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,7 +20,7 @@
         <nav id="drawer" class="hidden">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="#">Favorite</a></li>
+                <li><a href="#/favorite">Favorite</a></li>
                 <li><a href="https://github.com/RulyAnggriawan" title="github">About Us</a></li>
             </ul>
         </nav>
@@ -35,6 +35,7 @@
     <main id="main-content">
         
     </main>
+    
     <footer>
         <p>by : Ruly Anggriawan - 2020</p>
     </footer>
