--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -73,6 +73,7 @@ header img{
     background-position: center center;
     color: aliceblue;
     text-align: center;
+    padding: 10px;
 }
 
 .jumbotron > h1{
@@ -97,12 +98,12 @@ a{
 footer{
     text-align: center;
     min-height: 50px;
-    background-color: #b6eb7a;
+    background-color: #e1ffc2;
     line-height: 50px;
 }
 
 .skip-link{
-    background-color: #b6eb7a;
+    background-color: #e1ffc2;
     padding: 10px;
     position: absolute;
     top: -100px;
@@ -113,16 +114,16 @@ footer{
 }
 
 *:focus{
-    outline: 2px solid;
+    outline: 2px solid #092532;
 }
 
-.description{
-    text-overflow: ellipsis;
-    overflow: hidden;
-    display:-webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-}
+
+
+/* detail page */
+
+
+
+/* end detail page */
 
 /* style for tablet */
 @media screen and (min-width: 768px){
